--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -37,6 +39,7 @@
     "react-toastify": "^10.0.6",
     "uuid": "^11.0.3",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "scripts": {
